--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,14 @@
 {
   "name": "hardhat-project",
+  "type": "module",
+  "main": "scripts/upload.js",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "ipfs-http-gateway": "0.9.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "ipfs-http-client": "^56.0.2",
+    "kubo-rpc-client": "^5.1.0"
   }
 }
