--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "ipfs-http-gateway": "0.9.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "file-type": "^20.4.1",
     "fs": "^0.0.1-security",
     "hardhat": "^2.22.19",
     "ipfs-http-client": "^56.0.3",
